# d2-armor-filter

./: .gitignore  config.ini  main.py  pyproject.toml  requirements.txt  run.bat  run.sh  test.py
src/: armor_cleaner.py  auth.py  controller.py  destiny_api.py  main.py  style.qss  ui.py  workers.py
tests/: test_armor_filter.py
