[project]
name = "d2-armor-filter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=2.2.3",
    "polars>=1.24.0",
    "pyqt5>=5.15.11",
    "requests>=2.32.3",
]

[tool.uv]
constraint-dependencies = ["pyqt5-qt5 <=5.15.2"]
