[project]
name = "d2-armor-filter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=44.0.2",
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "numpy>=2.2.3",
    "polars>=1.24.0",
    "pyqt5>=5.15.11",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
    "tqdm>=4.67.1",
]

[tool.uv]
constraint-dependencies = ["pyqt5-qt5 <=5.15.2"]
